@@ -76,7 +76,7 @@
 .\" OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE,
 .\" EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.TH DIFF 1 "3/26/05" "Heirloom Toolchest" "User Commands"
+.TH DIFF 1 "3/27/05" "Heirloom Toolchest" "User Commands"
 .SH NAME
 diff \- differential file comparator
 .SH SYNOPSIS
@@ -107,6 +107,7 @@ diff \- differential file comparator
 [\fB\-S\ \fIname\fR]
 [\fB\-U\ \fInumber\fR]
 [\fB\-x\ \fIpattern\fR]
+[\fB\-X\ \fIname\fR]
 \fIdirectory1\fR \fIdirectory2\fR
 .br
 .hy 1
@@ -418,6 +419,11 @@ If
 .I pattern
 matches a directory,
 files below that directory are also excluded.
+This option is an extension.
+.TP 10
+.BI \-X " name"
+excludes all file names contained in
+.IR name .
 This option is an extension.
 .SH "ENVIRONMENT VARIABLES"
 .TP
