@@ -71,12 +71,13 @@
  * EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-/*	Sccsid @(#)diff.c	1.23 (gritter) 3/27/05>	*/
+/*	Sccsid @(#)diff.c	1.24 (gritter) 3/27/05>	*/
 /*	from 4.3BSD diff.c 4.6 4/3/86	*/
 
 #include "diff.h"
 #include <unistd.h>
 #include <locale.h>
+#include <iblok.h>
 /*
  * diff - driver and subroutines
  */
@@ -89,6 +90,7 @@ const char	*argv0;
 
 static void	usage(void);
 static void	xadd(const char *);
+static void	Xadd(const char *);
 
 int
 main(int argc, char **argv)
@@ -104,7 +106,7 @@ main(int argc, char **argv)
 	status = 2;
 	argv0 = argv[0];
 	diffargv = argv;
-	while ((i = getopt(argc, argv, ":D:efnbBwitcC:uU:hS:rslNx:a12p"))
+	while ((i = getopt(argc, argv, ":D:efnbBwitcC:uU:hS:rslNx:a12pX:"))
 			!= EOF) {
 		switch (i) {
 #ifdef notdef
@@ -218,6 +220,9 @@ main(int argc, char **argv)
 			break;
 		case 'p':
 			pflag++;
+			break;
+		case 'X':
+			Xadd(optarg);
 			break;
 		default:
 			if (invalid == 0 && !sysv3)
@@ -428,6 +433,36 @@ xadd(const char *cp)
 	xp->x_pat = cp;
 	xp->x_nxt = xflag;
 	xflag = xp;
+}
+
+static void
+Xadd(const char *name)
+{
+	struct iblok	*ip;
+	char	*line = NULL;
+	size_t	size = 0, len;
+
+	if (name[0] == '-' && name[1] == '\0')
+		ip = ib_alloc(0, 0);
+	else
+		ip = ib_open(name, 0);
+	if (ip == NULL) {
+		fprintf(stderr, "%s: -X %s: %s\n", progname, name,
+				strerror(errno));
+		done();
+	}
+	while ((len = ib_getlin(ip, &line, &size, realloc)) != 0) {
+		if (line[len-1] == '\n')
+			line[--len] = '\0';
+		xadd(line);
+		line = NULL;
+		size = 0;
+	}
+	free(line);
+	if (ip->ib_fd)
+		ib_close(ip);
+	else
+		ib_free(ip);
 }
 
 void
