@@ -5,13 +5,13 @@
 #else
 #define	USED
 #endif
-static const char sccsid[] USED = "@(#)diff.sl	1.44 (gritter) 3/27/05";
+static const char sccsid[] USED = "@(#)diff.sl	1.45 (gritter) 3/27/05";
 
 /*
 diff.h:
 	diff.h	1.15 (gritter) 3/26/05
 diff.c:
-	diff.c	1.23 (gritter) 3/27/05
+	diff.c	1.24 (gritter) 3/27/05
 diffdir.c:
 	diffdir.c	1.28 (gritter) 3/27/05
 diffreg.c:
